Fixed spacing issues in GuideDog entry

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@
     color:#c7910a;
 }
 .guidedog-image {
-    width: 100%;
+    width: 40%;
     margin-right: 2%;
     margin-left: 2%;
 }
